--- a/dot-config/btop/btop.conf
+++ b/dot-config/btop/btop.conf
@@ -98,7 +98,7 @@ cpu_graph_upper = "Auto"
 
 #* Sets the CPU stat shown in lower half of the CPU graph, "total" is always available.
 #* Select from a list of detected attributes from the options menu.
-cpu_graph_lower = "Auto"
+cpu_graph_lower = "user"
 
 #* If gpu info should be shown in the cpu box. Available values = "Auto", "On" and "Off".
 show_gpu_info = "Auto"
@@ -107,7 +107,7 @@ show_gpu_info = "Auto"
 cpu_invert_lower = True
 
 #* Set to True to completely disable the lower CPU graph.
-cpu_single_graph = True
+cpu_single_graph = False
 
 #* Show cpu box at bottom of screen instead of top.
 cpu_bottom = False
@@ -169,7 +169,7 @@ show_swap = True
 swap_disk = True
 
 #* If mem box should be split to also show disks info.
-show_disks = True
+show_disks = False
 
 #* Filter out non physical disks. Set this to False to include network disks, RAM disks and similar.
 only_physical = True
